--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,17 @@
 {
-    "manifest_version": 2,
+  "manifest_version": 3,
 	"name": "Chrome 插件管理",
 	"description": "Chrome 插件管理",
     "author": "dev-coco",
-    "version": "1.0",
-    "browser_action": {
+    "version": "1.0.2",
+    "action": {
       "default_icon": "icon.png",
       "default_popup": "popup.html"
     },
     "icons": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
+      "128": "icon.png"
     },
 	"permissions": [
 		"management"
-	],
-	"commands": {
-		"_execute_browser_action": {
-			"suggested_key": {
-				"windows": "Ctrl+B",
-				"mac": "Command+B"
-			}
-		}
-	}
+	]
 }
